// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Pre checkGrammar 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkGrammar 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkGrammar 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkGrammar 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre className 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre content 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</pre>
`;

exports[`UU5.Bricks.Pre content 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</pre>
`;

exports[`UU5.Bricks.Pre content 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</pre>
`;

exports[`UU5.Bricks.Pre content 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</pre>
`;

exports[`UU5.Bricks.Pre controlled 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre controlled 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre controlled 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre controlled 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre default props 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre disabled 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</pre>
`;

exports[`UU5.Bricks.Pre disabled 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre disabled 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre disabled 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</pre>
`;

exports[`UU5.Bricks.Pre docKit examples UU5.Bricks.Pre should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  style={Object {}}
  title={null}
>
  <p
    className="uu5-bricks-p"
    style={Object {}}
    title={null}
  >
    This is normal text
  </p>
  <pre
    className="uu5-bricks-pre uu5-bricks-pre"
    style={Object {}}
    title={null}
  >
    <p
      className="uu5-bricks-p"
      style={Object {}}
      title={null}
    >
      This is preformated              text
    </p>
  </pre>
</div>
`;

exports[`UU5.Bricks.Pre dynamic 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre dynamic 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre dynamic 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre dynamic 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre id 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre mainAttrs 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre name 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector 2`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector 3`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector 4`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre tooltip 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
